# agile-learning-test

./: .gitignore  AGILE_FRAMEWORK.md  README.md  milestones.md  pyproject.toml  skills_competencies.md
.cursor/rules/: create-new-sprint.mdc  update-progress.mdc
progress/: milestones.md  skills_competencies.md
sprints/: backlog.md
sprints/01_setup_and_basics/: README.md
sprints/01_setup_and_basics/notes/: 01_permute_usage.md  01_tensor_basics.py  02d_hidden_layer_network.md
sprints/01_setup_and_basics/results/: 01_tensor_basics.py  02_autograd_intro.py  02b_autograd_scalar_example.py  02c_neural_network_gradients.py  02d_hidden_layer_network.py
sprints/02_datasets_and_dataloaders/: README.md
sprints/02_datasets_and_dataloaders/notes/: 01_dataset_basics.md  02_dataloader_and_builtin.md  03_data_augmentation_guide.md
sprints/02_datasets_and_dataloaders/results/: 01_simple_dataset.py  02_dataloader_features.py  03_builtin_datasets.py  03_load_mnist_with_augmentation.py  04_custom_transform.py
sprints/03_models_and_training_loops/: README.md
sprints/03_models_and_training_loops/notes/: 01_define_nn_module_notes.md  02_activation_functions_notes.md  02_loss_functions_training_loop_notes.md  02a_cross_entropy_explained.md  03_module_composition_notes.md  03_optimizers_notes.md  04_training_loop_notes.md  05_basic_evaluation_notes.md
sprints/03_models_and_training_loops/results/: 01_define_nn_module.py  02_loss_functions.py  03_optimizers.py  04_training_loop.py  05_basic_evaluation.py
sprints/04_advanced_training_mnist/: README.md
sprints/04_advanced_training_mnist/results/: define_cnn.py  (+2 more)
sprints/05_embeddings_and_positional_encoding/: README.md
sprints/06_multi_head_attention/: README.md
sprints/07_transformer_block/: README.md
sprints/08_gpt2_assembly/: README.md
sprints/09_train_gpt2/: README.md
sprints/10_pretrained_generation_demo/: README.md
sprints/11_finetune_gpt2_classification/: README.md
sprints/12_finetune_gpt2_generative/: README.md
sprints/13_peft_lora/: README.md
sprints/14_quantization/: README.md
sprints/15_encoder_decoder/: README.md
sprints/16_flirty_llama/: README.md
sprints/16_grpo_cooking/: README.md  ideation.md  load_model.py  prepare_dataset.py  train_grpo.py  train_reward_model.py
sprints/16_ppo_flirty_llama/: README.md  ideation.md
sprints/17_graph_nn/: README.md  ideation.md
(+116 files in other folders)
