[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_gpt2_from_scratch"
version = "0.1.0"
description = "Learning PyTorch and building a GPT-2 like model from the ground up."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License", # Or choose another license
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "matplotlib>=3.9.1", # For visualization
    "numpy>=1.26.0", # For numerical operations
    "tqdm>=4.67.0", # For progress bars
    "toml>=0.10.0", # For configuration file
    "tensorboard>=2.19.0", # For visualizing training
    "torch-tb-profiler>=0.4.3", # For PyTorch profiling with TensorBoard
]

[project.urls]
"Homepage" = "https://github.com/your_username/your_repo_name" # Optional: Update later
"Bug Tracker" = "https://github.com/your_username/your_repo_name/issues" # Optional: Update later 